--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="biggestFish">
-                    <img src="images/biggestFish/42in_muskie.png"
+                    <img src="images/biggestFish/42in_muskie.jpg"
                         alt="42 inch Tiger Muskie caught June 26, 2011 at Pineview Reservoir on a clear white jerkbait">
                     <div class="biggest-fish-text mx-auto">
                         <p class="biggest-text has-text-white p-2 m-0">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="biggestFish">
-                    <img src="images/biggestFish/Muskie6.png"
+                    <img src="images/biggestFish/Muskie6.jpg"
                         alt="42 inch Tiger Muskie caught August 8, 2017 at Pineview Reservoir on a 4 inch Bass colored swimbait.">
                     <div class="biggest-fish-text mx-auto">
                         <p class="biggest-text has-text-white p-2">
@@ -229,7 +229,7 @@
                     </div>
                 </div>
                 <div class="biggestFish">
-                    <img src="images/biggestFish/7lb_laker.png"
+                    <img src="images/biggestFish/7lb_laker.jpg"
                         alt="26 inch 7lb. Lake Trout caught trolling on Lake Superior in Northern Minnesota">
                     <div class="biggest-fish-text mx-auto">
                         <p class="biggest-text has-text-white p-2">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="biggestFish">
-                    <img src="images/biggestFish/6lb_cutt.png"
+                    <img src="images/biggestFish/6lb_cutt.jpg"
                         alt="25 inch 6lb. Cutthroat caught on a white tube jig at Lost Creek. This fish is only .25 inch off the Boneville Cutthroat state record.">
                     <div class="biggest-fish-text mx-auto">
                         <p class="biggest-text has-text-white p-2">
