--- a/yearly_reports/2018.html
+++ b/yearly_reports/2018.html
@@ -57,7 +57,7 @@
                         alt="21 inch East Canyon Reservoir Brown Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/22in_cutt.png"
+                    <img src="../images/bestCatches/2018/22in_cutt.jpg"
                         alt="22 inch Strawberry Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
