--- a/yearly_reports/2022.html
+++ b/yearly_reports/2022.html
@@ -49,11 +49,11 @@
                         alt="20 inch brood stock Rainbow Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2022/20in_cutt.png"
+                    <img src="../images/bestCatches/2022/20in_cutt.jpg"
                         alt="20 inch Lost Creek Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2022/ice_cutt.png"
+                    <img src="../images/bestCatches/2022/ice_cutt.jpg"
                         alt="24 inch 4 pound 8 ounce Strawberry Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
@@ -337,6 +337,89 @@
                         <a class="location-links button my-5" href="2022/strawberry.html">Strawberry</a>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="has-text-white has-text-centered mb-6">2022 Official Projection Totals</h2>
+                <div class="columns">
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Mar - 84/128</p>
+                                <progress class="progress is-success px-4 is-large" value="84" max="128"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Apr - 113/68</p>
+                                <progress class="progress is-success px-4 is-large" value="113" max="68"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">May - 35/93</p>
+                                <progress class="progress is-success px-4 is-large" value="35" max="93"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Spring - 275/288</p>
+                        <progress class="progress is-success px-4 mb-6 is-large season-bar" value="275" max="288"></progress>
+                    </div>
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">June - 207/227</p>
+                                <progress class="progress is-success px-4 is-large" value="207" max="227"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">July - 472/285</p>
+                                <progress class="progress is-success px-4 is-large" value="472" max="285"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Aug - 362/193</p>
+                                <progress class="progress is-success px-4 is-large" value="362" max="193"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Summer - 1041/705</p>
+                        <progress class="progress is-success px-4 is-large season-bar" value="1041" max="705"></progress>
+                    </div>
+                </div>
+                <div class="columns">
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Sept - 40/160</p>
+                                <progress class="progress is-success px-4 is-large" value="40" max="160"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Oct - 172/274</p>
+                                <progress class="progress is-success px-4 is-large" value="172" max="274"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Nov - 14/119</p>
+                                <progress class="progress is-success px-4 is-large" value="14" max="119"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Fall - 226/553</p>
+                        <progress class="progress is-success px-4 is-large season-bar" value="226" max="553"></progress>
+                    </div>
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Jan - 70/89</p>
+                                <progress class="progress is-success px-4 is-large" value="70" max="89"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Feb - 118/124</p>
+                                <progress class="progress is-success px-4 is-large" value="118" max="124"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Dec - 23/18</p>
+                                <progress class="progress is-success px-4 is-large" value="23" max="18"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Winter - 211/217</p>
+                        <progress class="progress is-success px-4 mb-6 is-large season-bar" value="211" max="217"></progress>
+                    </div>
+                </div>
+                <p class="projection-title has-text-white ml-4 mt-4">Year - 1753/1806</p>
+                <progress class="progress is-success px-4 is-large" value="1753" max="1806"></progress>
             </div>
         </section>
     </main>
