--- a/yearly_reports/2018.html
+++ b/yearly_reports/2018.html
@@ -347,40 +347,40 @@
             <div class="container location-select">
                 <div class="columns is-flex is-justify-content-center has-text-centered is-multiline">
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/adams.html">Adams</a>
+                        <a class="location-links button my-5" href="2018/adams_2018.html">Adams</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/east_canyon.html">East Canyon</a>
+                        <a class="location-links button my-5" href="2018/east_canyon_2018.html">East Canyon</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/hobbs.html">Hobbs</a>
+                        <a class="location-links button my-5" href="2018/hobbs_2018.html">Hobbs</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/holmes.html">Holmes</a>
+                        <a class="location-links button my-5" href="2018/holmes_2018.html">Holmes</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/jensen.html">Jensen</a>
+                        <a class="location-links button my-5" href="2018/jensen_2018.html">Jensen</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/kaysville.html">Kaysville</a>
+                        <a class="location-links button my-5" href="2018/kaysville_2018.html">Kaysville</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/kens.html">Kens</a>
+                        <a class="location-links button my-5" href="2018/kens_2018.html">Kens</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/lost_creek.html">Lost Creek</a>
+                        <a class="location-links button my-5" href="2018/lost_creek_2018.html">Lost Creek</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/pinewview.html">Pineview</a>
+                        <a class="location-links button my-5" href="2018/pinewview_2018.html">Pineview</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/rockport.html">Rockport</a>
+                        <a class="location-links button my-5" href="2018/rockport_2018.html">Rockport</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/strawberry.html">Strawberry</a>
+                        <a class="location-links button my-5" href="2018/strawberry_2018.html">Strawberry</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/willard.html">Willard</a>
+                        <a class="location-links button my-5" href="2018/willard_2018.html">Willard</a>
                     </div>
                 </div>
             </div>
