--- a/yearly_reports/2022.html
+++ b/yearly_reports/2022.html
@@ -310,31 +310,31 @@
             <div class="container location-select">
                 <div class="columns is-flex is-justify-content-center has-text-centered is-multiline">
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/adams.html">Adams</a>
+                        <a class="location-links button my-5" href="2022/adams_2022.html">Adams</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/good_ski.html">Good Ski</a>
+                        <a class="location-links button my-5" href="2022/good_ski_2022.html">Good Ski</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/hobbs.html">Hobbs</a>
+                        <a class="location-links button my-5" href="2022/hobbs_2022.html">Hobbs</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/holmes.html">Holmes</a>
+                        <a class="location-links button my-5" href="2022/holmes_2022.html">Holmes</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/jensen.html">Jensen</a>
+                        <a class="location-links button my-5" href="2022/jensen_2022.html">Jensen</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/kaysville.html">Kaysville</a>
+                        <a class="location-links button my-5" href="2022/kaysville_2022.html">Kaysville</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/lost_creek.html">Lost Creek</a>
+                        <a class="location-links button my-5" href="2022/lost_creek_2022.html">Lost Creek</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/stansbury.html">Stansbury</a>
+                        <a class="location-links button my-5" href="2022/stansbury_2022.html">Stansbury</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2022/strawberry.html">Strawberry</a>
+                        <a class="location-links button my-5" href="2022/strawberry_2022.html">Strawberry</a>
                     </div>
                 </div>
             </div>
