--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                             <a href="about.html" class="button home-button mt-4 is-rounded">Read More</a>
                         </div>
                         <div class="column about-column">
-                            <figure class="image about-img">
-                                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                            <figure class="image">
+                                <img class="about-img" src="images/about/about_home.jpg">
                               </figure>
                         </div>
                     </div>     
